Make starts in one line with text

--- a/src/style.css
+++ b/src/style.css
@@ -149,6 +149,21 @@
         -ms-flex: 50%;
             flex: 50%;
   }
+  .rating-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-column-gap: 25px;
+            column-gap: 25px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 20px 0;
+  }
+  .rating-block .stars {
+    margin-left: 20px;
+    margin-bottom: 0;
+  }
   .rating-block_reviews {
     margin-left: 0px;
     margin-right: 80px;
